--- a/WSR Project/WSR Project/WSR Project.csproj
+++ b/WSR Project/WSR Project/WSR Project.csproj
@@ -166,6 +166,11 @@
     <Compile Include="InfoMenu\Org.Designer.cs">
       <DependentUpon>Org.cs</DependentUpon>
     </Compile>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Runner\Ask.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -232,11 +237,6 @@
     </Compile>
     <Compile Include="Classes\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
     <Compile Include="Runner\MarathonReg.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -511,6 +511,22 @@
     <None Include="Resources\MarathonImage.jpg" />
     <None Include="Resources\InteractiveMap.jpg" />
     <None Include="Resources\FormLoading.gif" />
+    <None Include="Resources\map-icon-drinks.png" />
+    <None Include="Resources\Delete-80_icon-icons.com_57340.png" />
+    <None Include="Resources\1number_1_3831.png" />
+    <None Include="Resources\2number_2_3079.png" />
+    <None Include="Resources\3number_3_3077.png" />
+    <None Include="Resources\4number_4_3829.png" />
+    <None Include="Resources\5_number_3827.png" />
+    <None Include="Resources\6_number_3075.png" />
+    <None Include="Resources\Delete-80_icon-icons.com_573401.png" />
+    <Content Include="Resources\map-icon-energy-bars.png" />
+    <Content Include="Resources\map-icon-information.png" />
+    <Content Include="Resources\map-icon-medical.png" />
+    <None Include="Resources\map-icon-start.png" />
+    <None Include="Resources\map-icon-start1.png" />
+    <Content Include="Resources\map-icon-toilets.png" />
+    <None Include="Resources\marathon-skills-2016-marathon-map.jpg" />
     <Content Include="Resources\project_icon.ico" />
     <Content Include="Resources\icons_back.png" />
     <None Include="Resources\icons_Results.png" />
