--- a/WSR Project/WSR Project/WSR Project.csproj
+++ b/WSR Project/WSR Project/WSR Project.csproj
@@ -505,6 +505,9 @@
     <None Include="Resources\aExit.png" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\ronaldinho.jpg" />
+    <None Include="Resources\sloth.jpg" />
+    <None Include="Resources\worm.jpg" />
     <None Include="Resources\карточка сбербунка.jpg" />
     <None Include="Resources\TeatroMunicipal.jpg" />
     <None Include="Resources\map_PictureBoxLabel.png" />
@@ -520,6 +523,14 @@
     <None Include="Resources\5_number_3827.png" />
     <None Include="Resources\6_number_3075.png" />
     <None Include="Resources\Delete-80_icon-icons.com_573401.png" />
+    <None Include="Resources\f1-car.jpg" />
+    <None Include="Resources\capybara.jpg" />
+    <None Include="Resources\jaguar.jpg" />
+    <None Include="Resources\airbus-a380.jpg" />
+    <None Include="Resources\football-field.jpg" />
+    <None Include="Resources\horse.png" />
+    <None Include="Resources\bus.jpg" />
+    <None Include="Resources\f1-car1.jpg" />
     <Content Include="Resources\map-icon-energy-bars.png" />
     <Content Include="Resources\map-icon-information.png" />
     <Content Include="Resources\map-icon-medical.png" />
@@ -527,6 +538,7 @@
     <None Include="Resources\map-icon-start1.png" />
     <Content Include="Resources\map-icon-toilets.png" />
     <None Include="Resources\marathon-skills-2016-marathon-map.jpg" />
+    <None Include="Resources\pair-of-havaianas.jpg" />
     <Content Include="Resources\project_icon.ico" />
     <Content Include="Resources\icons_back.png" />
     <None Include="Resources\icons_Results.png" />
