--- a/WSR Project/WSR Project/App.config
+++ b/WSR Project/WSR Project/App.config
@@ -6,6 +6,9 @@
         <add name="WSRProject.Properties.Settings.WSRConnectionString"
             connectionString="Data Source=tcp:wsr.database.windows.net,1433;Initial Catalog=WSR;Persist Security Info=True;User ID=Kursacheg;Password=Sharaga0264"
             providerName="System.Data.SqlClient" />
+        <add name="WSRProject.Properties.Settings.WSRConnectionString1"
+            connectionString="Data Source=wsr.database.windows.net,1433;Initial Catalog=WSR;Persist Security Info=True;User ID=Kursacheg;Password=Sharaga0264"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
