--- a/WSR Project/WSR Project/Properties/Settings.settings
+++ b/WSR Project/WSR Project/Properties/Settings.settings
@@ -10,5 +10,13 @@
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
       <Value Profile="(Default)">Data Source=tcp:wsr.database.windows.net,1433;Initial Catalog=WSR;Persist Security Info=True;User ID=Kursacheg;Password=Sharaga0264</Value>
     </Setting>
+    <Setting Name="WSRConnectionString1" Type="(Connection string)" Scope="Application">
+      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
+  &lt;ConnectionString&gt;Data Source=wsr.database.windows.net,1433;Initial Catalog=WSR;Persist Security Info=True;User ID=Kursacheg;Password=Sharaga0264&lt;/ConnectionString&gt;
+  &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
+&lt;/SerializableConnectionString&gt;</DesignTimeValue>
+      <Value Profile="(Default)">Data Source=wsr.database.windows.net,1433;Initial Catalog=WSR;Persist Security Info=True;User ID=Kursacheg;Password=Sharaga0264</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
